--- a/page.html
+++ b/page.html
@@ -1,11 +1,28 @@
 <html>
 <body>
+<style>
+body {
+  background-color: lightblue;
+}
+.button1 {
+  background-color: blue;
+  color: black;
+  border: 2px solid #4CAF50;
+  cursor: pointer;
+  width: 80px;
+  height: 40px;
+}
+</style>
 <form method="get">
-<input name="outcomes" type="text" value="one, two, three" /> 
-<input name="steps" type="text" value="1" /> 
+<p style="color:green; font-size:20px">
+<input name="Net id" type="text" value="0" />Network id to manipulate<br>
+<input name="outcomes" type="text" value="" />Example: one, two, three<br>
+<input name="steps" type="text" value="1" />Number of forecast steps<br>
 <br /> 
-<input type="submit" name="submit" class="button" value="Submit"/>Learn
-<input type="submit" name="predict" class="button" value="Predict"/>Predict
+<input type="submit" name="load" class="button button1" value="Load"/>Load Bayes network<br>
+<input type="submit" name="submit" class="button button1" value="Submit"/>Learn<br>
+<input type="submit" name="predict" class="button button1" value="Predict"/>Predict<br>
+</p>
 </form>
 </body>
 </html>
