Add some meaningful header text about this project.

--- a/page.html
+++ b/page.html
@@ -15,6 +15,12 @@ body {
 </style>
 <form method="get">
 <p style="color:green; font-size:20px">
+<header>
+<h1>
+That forecasting tool uses modified Bayesian network(https://en.wikipedia.org/wiki/Bayesian_network)
+to predict the upcoming events. However just as a neural network it requires to study first.
+</h1>
+</header>
 <input name="Net id" type="text" value="0" />Network id to manipulate<br>
 <input name="outcomes" type="text" value="" />Example: one, two, three<br>
 <p>Click on the "Choose File" button to upload a file. Events should be comma separated.</p>
