Update web page as well

--- a/stanmessenger.html
+++ b/stanmessenger.html
@@ -13,7 +13,7 @@ for Android.
 </header>
 <br>
 <p style="color:green; font-size:20px">
-<a href="/get_messenger">Click this link</a>
+<a href="/get_messenger.apk">Click this link</a>
 </p>
 </body>
 </html>
